# pleasent-keepass-client-rs

./: .gitignore  Cargo.toml  README.md
assets/sql/: init_db.sql
src/: app.rs  client.rs  credentials_database.rs  error.rs  http_client.rs  lib.rs  main.rs  model.rs  settings.rs  timed_cache.rs  types.rs
src/db/: db_types.rs
src/http/: mod.rs  rest_client.rs  rest_error.rs
src/model/: credentials_database.rs  http_types.rs  mod.rs  pleasant_model.rs
src/rest/: mod.rs  rest_client.rs  rest_error.rs
test_assets/: root_folder_response.json  token_response.json
tests/: integration_tests.rs  support.rs
